# Mistral-Django

./: README.md  db.sqlite3  pyproject.toml  settings.py
chat/: urls.py  views.py
chat/static/chat/: styles.css
chat/templates/: chat.html  chat_response.html
chat/templates/chat/: index.html
core/: settings.py  urls.py
myproject/: urls.py
